removed main vertical scrolling

--- a/styles/global.css
+++ b/styles/global.css
@@ -23,6 +23,10 @@ html {
 }
 
 @media (max-width: 500px) {
+
+    html {
+        overflow-y: hidden;
+    }
     .paginationBar {
         position: initial;
     
