--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1&display=swap');
 
 html {
     background-color: rgb(55, 70, 100)
@@ -10,16 +11,44 @@ html {
     background: linear-gradient(0deg, rgba(17,24,36,1) 0%, rgba(29,66,142,1) 100%);
     color: white;
     text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+    border-left: 5px solid black;
+    border-right: 5px solid black;
+    font-family: 'M PLUS 1';
+    letter-spacing: 0.3rem;
+}
+
+.headerInfo {
+    background: linear-gradient(0deg, rgba(17,24,36,1) 0%, rgba(29,66,142,1) 100%);
+    color: white;
+    font-family: 'M PLUS 1';
+}
+
+.headerAddress {
+    background: linear-gradient(0deg, rgba(17,24,36,1) 0%, rgba(29,66,142,1) 100%);
+    color: white;
+    font-family: 'M PLUS 1';
 }
 
 .descBackground {
     background: white;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
-    height: 26.4rem;
+    height: 19.5rem;
 }
 
 .mainPage {
-    height: 58rem;
+    height: 54rem;
+    align-items: center;
+}
+
+.inputBar {
+    width: 50%;
+}
+
+.cardName {
+    display: flex;
+    justify-content: center;
+    font-weight: 700;
+    background-color: rgba(229, 231, 235)
 }
 
 @media (max-width: 500px) {
@@ -29,7 +58,7 @@ html {
     }
     .paginationBar {
         position: initial;
-    
+        margin-top: 50px;
     }
 
     .mainPage {
@@ -44,10 +73,19 @@ html {
 
     .headerTitle {
         width: 100%;
+        order: 1;
+        height: 100px;
+        border: none;
     }
 
     .headerInfo {
         width: 100%;
+        order: 2;
+    }
+
+    .headerAddressBar {
+        width: 100%;
+        order: 3;
     }
 
     .inputBar {
